# setlist-placeholder

./: .pre-commit-config.yaml  Dockerfile  Pipfile  docker-compose.yml  pyproject.toml
config/: app.conf
setlist_placeholder/: main.py  wsgi.py
setlist_placeholder/templates/: index.html  primary.html
