[tool.poetry]
name = "setlist-placeholder"
version = "20.01"
description = "Simple Script to create Placeholder pages from toml files"
authors = ["Rick Henry <rickhenry@rickhenry.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.0"
WeasyPrint = "^51.0"
Jinja2 = "^2.10"
toml = "^0.10.0"
Flask = "^1.1"
flask-wtf = "^0.14.2"
wtforms = "^2.2"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
setlist-placeholder = 'setlist_placeholder.main:cli'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

